// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip> Snapshots and structure should not wrap Button 1`] = `
<Fragment>
  <Button
    aria-describedby="tooltip-uid"
    emphasis="high"
    size="m"
    theme="light"
  >
    button
  </Button>
  <Portal
    containerInfo={<body />}
  >
    <div
      aria-label="tooltip1"
      className="lumx-tooltip lumx-tooltip--position-bottom"
      id="tooltip-uid"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <div
        className="lumx-tooltip__arrow"
      />
      <div
        className="lumx-tooltip__inner"
      >
        tooltip1
      </div>
    </div>
  </Portal>
</Fragment>
`;

exports[`<Tooltip> Snapshots and structure should not wrap Icon 1`] = `
<Fragment>
  <Icon
    aria-describedby="tooltip-uid"
    icon="icon"
  />
  <Portal
    containerInfo={<body />}
  >
    <div
      aria-label="tooltip1"
      className="lumx-tooltip lumx-tooltip--position-bottom"
      id="tooltip-uid"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <div
        className="lumx-tooltip__arrow"
      />
      <div
        className="lumx-tooltip__inner"
      >
        tooltip1
      </div>
    </div>
  </Portal>
</Fragment>
`;

exports[`<Tooltip> Snapshots and structure should render correctly 1`] = `
<Fragment>
  <div
    aria-describedby="tooltip-uid"
    className="lumx-tooltip-anchor-wrapper"
  >
    Anchor
  </div>
  <Portal
    containerInfo={<body />}
  >
    <div
      aria-label="Tooltip"
      className="lumx-tooltip lumx-tooltip--position-bottom"
      id="tooltip-uid"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <div
        className="lumx-tooltip__arrow"
      />
      <div
        className="lumx-tooltip__inner"
      >
        Tooltip
      </div>
    </div>
  </Portal>
</Fragment>
`;

exports[`<Tooltip> Snapshots and structure should return children when empty label 1`] = `
<Fragment>
  <Icon
    icon="icon"
  />
</Fragment>
`;

exports[`<Tooltip> Snapshots and structure should work on disabled elements 1`] = `
<Fragment>
  <div
    aria-describedby="tooltip-uid"
    className="lumx-tooltip-anchor-wrapper"
  >
    <Button
      emphasis="high"
      isDisabled={true}
      size="m"
      theme="light"
    >
      Empty
    </Button>
  </div>
  <Portal
    containerInfo={<body />}
  >
    <div
      aria-label="Tooltip on disabled button"
      className="lumx-tooltip lumx-tooltip--position-bottom"
      id="tooltip-uid"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <div
        className="lumx-tooltip__arrow"
      />
      <div
        className="lumx-tooltip__inner"
      >
        Tooltip on disabled button
      </div>
    </div>
  </Portal>
</Fragment>
`;

exports[`<Tooltip> Snapshots and structure should wrap children 1`] = `
<Fragment>
  <div
    aria-describedby="tooltip-uid"
    className="lumx-tooltip-anchor-wrapper"
  >
    children
  </div>
  <Portal
    containerInfo={<body />}
  >
    <div
      aria-label="tooltip1"
      className="lumx-tooltip lumx-tooltip--position-bottom"
      id="tooltip-uid"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <div
        className="lumx-tooltip__arrow"
      />
      <div
        className="lumx-tooltip__inner"
      >
        tooltip1
      </div>
    </div>
  </Portal>
</Fragment>
`;

exports[`<Tooltip> Snapshots and structure should wrap children 2`] = `
<Fragment>
  children
  <Portal
    containerInfo={<body />}
  >
    <div
      aria-label="tooltip1"
      className="lumx-tooltip lumx-tooltip--position-bottom"
      id="tooltip-uid"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <div
        className="lumx-tooltip__arrow"
      />
      <div
        className="lumx-tooltip__inner"
      >
        tooltip1
      </div>
    </div>
  </Portal>
</Fragment>
`;
